# pics_tg_bot

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0847a5148feb_again_fix_relation_problem.py  0b1f7b07b89a_move_tags_to_distinct_table_make_.py  0b6e18b880f0_add_paid.py  39b2ff8f261c_initial_migration.py  39ee78318356_initial_migration.py  593930aea021_again_fix_relation_problem.py  6f1e0e95a6de_fix_relation_problem.py  6f6ac6afb20a_fix_user_tg_id_datatype.py  86cc18c1095e_initial_migration.py  af8abcf41406_move_tags_to_distinct_table_make_.py  b3acb6799237_alter_tg_id_to_biginteger.py  b6ab7fcc0f34_add_payment.py  e16a65b05a90_fix_user_tg_id_datatype.py
bot/: config.py  router.py
bot/filters/: admin.py  price.py  tag.py
bot/handlers/: donate.py  gallery.py  help.py  payment.py  search.py  start.py
bot/handlers/admin/: load_pic.py
bot/keyboards/: back.py  carousel.py  donate.py  help.py  load_pics.py  payment.py  start.py  tags.py
bot/states/: donate.py  gallery.py  help.py  load_pics.py  search.py
bot/utils/: admin.py  commands.py  commands_text.py
database/: config.py  models.py  redis_config.py  requests.py
